--- a/beam-diameter-measurement-knifeedge/knife-edge-fit.ipynb
+++ b/beam-diameter-measurement-knifeedge/knife-edge-fit.ipynb
@@ -28,7 +28,8 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy.optimize import curve_fit\n",
     "from scipy import stats\n",
-    "from scipy.special import erf\n"
+    "from scipy.special import erf\n",
+    "#plt.style.use('dark_background')\n"
    ]
   },
   {
